test/tests/operators/accept_unix_socket/validation/error_path_exists.txt
error: UNIX domain socket path already exists
 --> tests/operators/accept_unix_socket/validation/error_path_exists.tql:5:20
  |
5 | accept_unix_socket "/tmp" {
  |                    ^^^^^^ 
  |
  = note: path: /tmp
  = hint: remove the existing non-socket file or choose another path
